fix: figure too big in art view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,8 @@ figure picture {
     margin: 0 auto;
 }
 
+.art figure img,
+.art figure picture,
 .photography figure img,
 .photography figure picture {
     width: auto;
